# teamspeak3-ai-music-bot

./: .env.example  .gitignore  .secret-allowlist  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.example.toml  identities.example.json  secret_guard.py  start_bot.sh  tickets.example.json
.github/workflows/: secret-guard.yml
githooks/: pre-commit  pre-push
scripts/: install_git_hooks.sh
src/: actions.rs  ai.rs  audio.rs  audit.rs  channels.rs  clients.rs  config.rs  context.rs  identity.rs  learning.rs  main.rs  permissions.rs  prompt_workspace.rs  prompts.rs  tickets.rs
