[package]
name = "ts3-ai-bot"
version = "0.1.0"
edition = "2021"
description = "A TeamSpeak 3 AI Support Agent bot using tsclientlib and Ollama"

[[bin]]
name = "ts3-ai-bot"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = "0.4.44"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "default-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3.47"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "macros", "time", "fs", "full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tsclientlib = { git = "https://github.com/ReSpeak/tsclientlib", default-features = false }
tsproto-types = { git = "https://github.com/ReSpeak/tsclientlib" }
tsproto-packets = { git = "https://github.com/ReSpeak/tsclientlib" }
audiopus = { version = "0.2.0", features = ["encoder"] }
urlencoding = "2.1.3"
uuid = "1.21.0"
whatlang = "0.18.0"
parking_lot = "0.12"
